--- a/src/Components/CSS/Nav.css
+++ b/src/Components/CSS/Nav.css
@@ -8,8 +8,7 @@
   justify-content: space-between;
   background-color: #fdfdfd;
   z-index: 1;
-
-
+  margin-bottom: 50px !important;
   transition-timing-function: ease-in;
   transition: all;
 }
