--- a/src/Components/CSS/Nav.css
+++ b/src/Components/CSS/Nav.css
@@ -11,6 +11,7 @@
   margin-bottom: 50px !important;
   transition-timing-function: ease-in;
   transition: all;
+  font-weight:450;
 }
 
 .Nav_white {
