--- a/src/Components/CSS/Row.css
+++ b/src/Components/CSS/Row.css
@@ -1,5 +1,6 @@
 .row {
-  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin-left: 20px;
   color: #43bb52;
 }
@@ -7,32 +8,29 @@
   display: flex;
   overflow-y: hidden;
   overflow-x: scroll;
-  padding: 20px;
-  scroll-behavior: smooth;
 }
 .rows_poster::-webkit-scrollbar {
   display: none;
 }
-.row_poster {
-  object-fit: contain;
-  width: 100%;
-  max-height: 100px;
-  transition: 400ms;
-  margin-right: 7px;
-  padding-right: 4px;
+
+.row_poster{
+    border-radius: 5px;
 }
 
 .row_poster:hover {
   transform: scale(1.1);
+  transition: all 0.15s ease-in;
   opacity: 1;
 }
 
-.row_posterLarge {
-  max-height: 250px;
-  padding-right: 4px;
-  margin-right: 10px;
-}
 
-.row_posterLarge:hover {
-  transform: scale(1.12);
+.rows_posterLinks {
+  display: flex;
+  padding: 3px;
+  object-fit: contain;
+  transition: 400ms;
+  max-height: 100px;
+  width: 200px;
+  height: 300px;
+  margin-right: 3px;
 }
