--- a/src/Components/CSS/RecipeDetail.css
+++ b/src/Components/CSS/RecipeDetail.css
@@ -1,3 +1,6 @@
+.info {
+  padding-left: 15px;
+}
 .image {
   display: flex;
   object-fit: contain;
@@ -9,26 +12,26 @@
   object-fit: contain;
   text-align: left;
   vertical-align: middle;
-  padding: 10px;
 }
 .header {
-  font-size: 30px;
+  font-size: 35px;
+  font-weight: bold;
+  padding: 5px;
 }
-.title {
-  padding-left: 10px;
-}
+
 .nutritionalInfo {
-  padding-left: 5px;
+  border-radius: 20px;
+  right: 50px;
+  padding-left: 8px;
+  background-color: #e9f6ef;
 }
 
-.summary{
-    font-size: 35px;
-    font-weight: bold;
 
-}
 .summaryContent {
+  text-align: justify;
   pointer-events: none;
   padding-bottom: 20px;
+  padding-left: 12px;
 }
 
 .summaryContent a {
@@ -36,3 +39,11 @@
   color: #000;
   font-weight: normal;
 }
+
+
+.instructions {
+  text-align: justify;
+  padding-bottom: 20px;
+}
+
+
