--- a/src/Components/CSS/RecipeDetail.css
+++ b/src/Components/CSS/RecipeDetail.css
@@ -20,10 +20,16 @@
 }
 
 .nutritionalInfo {
+  display: flex;
   border-radius: 20px;
-  right: 50px;
-  padding-left: 8px;
+  padding-left: 3px;
   background-color: #e9f6ef;
+  width: 50%;
+}
+
+.ingredientsInfo{
+  height: 100px;
+  width: 50%;
 }
 
 
@@ -31,7 +37,7 @@
   text-align: justify;
   pointer-events: none;
   padding-bottom: 20px;
-  padding-left: 12px;
+  padding-left: 7px;
 }
 
 .summaryContent a {
@@ -46,4 +52,8 @@
   padding-bottom: 20px;
 }
 
+.infoRow{
+  display: flex;
+  color: #000;
+}
 
