--- a/src/Components/CSS/Row.css
+++ b/src/Components/CSS/Row.css
@@ -2,7 +2,7 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin-left: 20px;
-  color: #43bb52;
+  color: black;
 }
 .rows_poster {
   display: flex;
