--- a/src/Components/CSS/Banner.css
+++ b/src/Components/CSS/Banner.css
@@ -25,9 +25,9 @@
 
 }
 .banner_fade{
-  height: 7.4rem;
+  height: 10rem;
   background-image: linear-gradient(
-    180deg,
+    /* 180deg, */
     transparent,
     rgba(255, 255, 255, 0.5),
     #fdfdfd);
