--- a/src/Components/CSS/ExerciseRow.css
+++ b/src/Components/CSS/ExerciseRow.css
@@ -1,52 +1,52 @@
 .row {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  margin-left: 20px;
   color: black;
 }
 .rows_poster {
   display: flex;
   overflow-y: hidden;
   overflow-x: scroll;
+  border-radius: 5px;
+  max-height: 350px;
+  object-fit: contain;
+  position: relative;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 .rows_poster::-webkit-scrollbar {
   display: none;
 }
 
-.row_poster {
-  border-radius: 5px;
-  max-height: 350px;
-  object-fit: contain;
-  position: relative;
-}
-
-.rows_posterLinks {
+.poster {
   display: flex;
-  padding: 3px;
+  padding: 10px;
   transition: 400ms;
   margin-right: 3px;
+  font-family: "Times New Roman", Times, serif;
 }
-.position-relative {
-  display: flex;
-}
+
 .figcaption {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  max-height: 350px;
+  max-width: 330px;
+  margin-right: 30px;
   position: absolute;
+  border-radius: 5px;
   font-size: medium;
   text-decoration: none;
   color: white;
   font-weight: bold;
   bottom: 0px;
   right: 0px;
-  left:0px;
-  background-image: linear-gradient(
-    180deg,
-    transparent,
-    rgba(139, 137, 137, 0.5),
-    #292828d2
-  );
+  left: 0px;
+  background-image: linear-gradient(240deg, transparent, #000000ef);
+  text-transform: capitalize;
 }
 
-.rows_posterLinks:hover {
+
+.position-relative:hover {
   transform: scale(1.1);
   transition: all 0.15s ease-in;
   opacity: 1;
