--- a/src/Components/CSS/ExerciseRow.css
+++ b/src/Components/CSS/ExerciseRow.css
@@ -14,6 +14,7 @@
   margin-right: 10px;
   margin-left: 10px;
 }
+
 .rows_poster::-webkit-scrollbar {
   display: none;
 }
@@ -23,12 +24,12 @@
   padding: 10px;
   transition: 400ms;
   margin-right: 3px;
-  font-family: "Times New Roman", Times, serif;
 }
 
 .figcaption {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  object-fit: fill;
   max-height: 350px;
   max-width: 330px;
   margin-right: 30px;
@@ -45,11 +46,16 @@
   text-transform: capitalize;
 }
 
+.position-relative {
+
+  max-height: 500px;
+  max-width: 500px;
+}
 
 .position-relative:hover {
   transform: scale(1.1);
   transition: all 0.15s ease-in;
   opacity: 1;
   border-radius: 5px;
-  padding: 3px;
+  padding: 13px;
 }
